--- a/gtk/theme/HighContrast/gtk.css
+++ b/gtk/theme/HighContrast/gtk.css
@@ -2662,52 +2662,66 @@ colorswatch {
       border-color: #fff; }
   colorswatch:selected {
     box-shadow: inset 0 1px rgba(0, 0, 0, 0.1), 0 1px #fff; }
-  button.color > colorswatch {
-    box-shadow: none; }
   colorswatch.top {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px; }
+  colorswatch.bottom {
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px; }
+  colorswatch.left, colorswatch:first-child:not(overlay):not(.top) {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px; }
+  colorswatch.right, colorswatch:last-child:not(overlay):not(.bottom) {
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px; }
+  colorswatch:only-child:not(overlay) {
+    border-radius: 6px; }
+  colorswatch.top > overlay {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px; }
-  colorswatch.bottom {
+  colorswatch.bottom > overlay {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px; }
-  colorswatch.left, colorswatch:first-child:not(overlay), colorswatch:first-child:not(.top) > .overlay {
+  colorswatch:first-child:not(.top) > overlay {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px; }
-  colorswatch.right, colorswatch:last-child:not(overlay), colorswatch:last-child:not(.bottom) > .overlay {
+  colorswatch:last-child:not(.bottom) > overlay {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px; }
-  colorswatch:only-child:not(overlay), colorswatch:only-child > overlay {
+  colorswatch:only-child > overlay {
     border-radius: 5px; }
   colorswatch.activatable:hover, colorswatch.activatable:hover:selected {
     background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0) 50%);
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.4), inset 0 -1px rgba(0, 0, 0, 0.4); }
-  colorswatch:backdrop, colorswatch:backdrop:selected {
+  colorswatch:backdrop, colorswatch:backdrop:selectedi, colorswatch.dark:backdrop, colorswatch.dark:backdrop:selected {
     background-image: none;
     box-shadow: none; }
   colorswatch.dark {
     color: white;
-    outline-color: rgba(0, 0, 0, 0.3); }
+    outline-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(0, 0, 0, 0.3); }
+    colorswatch.dark:hover {
+      border-color: rgba(0, 0, 0, 0.5); }
     colorswatch.dark:backdrop {
       color: rgba(255, 255, 255, 0.3); }
   colorswatch.light {
     color: black;
-    outline-color: rgba(255, 255, 255, 0.5); }
+    outline-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3); }
+    colorswatch.light:hover {
+      border-color: rgba(0, 0, 0, 0.5); }
     colorswatch.light:backdrop {
       color: rgba(0, 0, 0, 0.3); }
   colorswatch overlay, colorswatch overlay:selected {
-    border: 1px solid gray; }
-    colorswatch overlay:hover, colorswatch overlay:selected:hover {
-      border-color: black; }
+    background: none;
+    border: none; }
   colorswatch#add-color-button {
     border-width: 2px;
     border-style: solid;
     color: #000;
     background-image: none;
     background-color: #fff;
-    border-color: gray;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: none; }
+    border-color: gray; }
     colorswatch#add-color-button:hover {
       border-width: 2px;
       border-style: solid;
@@ -2723,13 +2737,10 @@ colorswatch {
       border-color: #8d8d8d;
       background-image: none;
       text-shadow: none;
-      -gtk-icon-shadow: none;
-      border-width: 1px;
-      color: gray; }
+      -gtk-icon-shadow: none; }
     colorswatch#add-color-button overlay {
-      border-width: 2px;
-      border-style: solid;
-      border-width: 0; }
+      border-width: 0;
+      background: none; }
 
 /**********************
  * Window Decorations *
